some adding the code for basic structure

--- a/indexm3.html
+++ b/indexm3.html
@@ -4,9 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Module3</title>
-    <link rel="stylesheet" href="indexm3.css">
+    <link rel="stylesheet" href="indexm3.css" />
   </head>
   <body>
-    
+    <div class="one">
+      <h1>CSE Exam Kit</h1>
+      <p>
+        Exam kit is a optional , but main book is most important for each
+        student , there reason is basic structure is every student needs.
+      </p>
+      <ol>
+        <li>Physics</li>
+        <li>Calculus</li>
+        <li>SPL</li>
+        <li>English</li>
+        <li>EEC</li>
+      </ol>
+    </div>
+    <div class="two">
+      <h1>CSE Exam Kit</h1>
+      <p>
+        Exam kit is a optional , but main book is most important for each
+        student , there reason is basic structure is every student needs.
+      </p>
+      <ol>
+        <li>Physics</li>
+        <li>Calculus</li>
+        <li>SPL</li>
+        <li>English</li>
+        <li>EEC</li>
+      </ol>
+    </div>
+    <div class="three">
+      <h1>CSE Exam Kit</h1>
+      <p>
+        Exam kit is a optional , but main book is most important for each
+        student , there reason is basic structure is every student needs.
+      </p>
+      <ol>
+        <li>Physics</li>
+        <li>Calculus</li>
+        <li>SPL</li>
+        <li>English</li>
+        <li>EEC</li>
+      </ol>
+    </div>
   </body>
 </html>
